# pyrawspeed

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
src/: pyrawspeed.cpp
test/: test_decode.py
