[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pyrawspeed"
version = "0.1.0"
description = "Python bindings for the rawspeed RAW image decoding library"
readme = "README.md"
license = { text = "LGPL-2.1-only" }
authors = [{ name = "kayamerel", email = "kayamerelwoo@gmail.ch" }]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DWITH_OPENMP=OFF"]
